# sdmxflow

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  ruff.toml  search.json  sitemap.xml  zensical.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh  setup.env.example
.github/workflows/: ci.yml  docs.yml  pypi.yml
changelog/: index.html
credits/: index.html
development/: index.html
docs/: api.md  changelog.md  concepts-and-design.md  credits.md  development.md  examples.md  faq.md  getting-started.md  glossary.md  index.md  integration-patterns.md  logging.md  output-layout.md  provider-support.md  scheduling-and-deployment.md
faq/: index.html
integration-patterns/: index.html
provider-support/: index.html
scheduling-and-deployment/: index.html
schemas/: ruff-permissive.schema.json
scripts/: download_dataset.py
sdmxflow/: __init__.py  _csv.py  _json.py  _logging.py  _paths.py  _types.py  dataset.py  errors.py  models.py
sdmxflow/download/: __init__.py  native.py  structures.py
sdmxflow/download/providers/: __init__.py  eurostat_bulk_csv.py
sdmxflow/extract/: __init__.py  codelists.py
sdmxflow/extras/: __init__.py  parquet.py
sdmxflow/metadata/: __init__.py  models.py  schema.py  writer.py
sdmxflow/query/: __init__.py  last_updated_data.py
tests/: conftest.py
tests/integration/: test_000_download_estat_real_world_fixtures.py
tests/sdmxflow/: test_csv.py  test_csv_branches.py  test_csv_more.py  test_dataset_branches.py  test_dataset_fetch.py  test_dataset_logging.py  test_json.py
tests/sdmxflow/download/: test_native.py  test_native_branches.py  test_native_more_branches.py  test_structures.py
tests/sdmxflow/extract/: test_codelists.py  test_codelists_branches.py
tests/sdmxflow/extras/: test_parquet.py
tests/sdmxflow/metadata/: test_models_validation.py  (+1 more)
versions/main/: index.html
versions/v0.1.0/: 404.html  search.json  sitemap.xml
versions/v0.1.1/: 404.html  index.html
(+25 files in other folders)
